layout issues 2

--- a/client/src/Escape/Play.css
+++ b/client/src/Escape/Play.css
@@ -5,6 +5,7 @@
     background: transparent;
     vertical-align: bottom;
     opacity: 0;
+    cursor: pointer;
 }
 
 .space2 {
@@ -14,6 +15,7 @@
     background: transparent;
     vertical-align: bottom;
     opacity: 0;
+    cursor: pointer;
 }
 
 .space3 {
@@ -23,6 +25,7 @@
     background: transparent;
     vertical-align: bottom;
     opacity: 0;
+    cursor: pointer;
 }
 
 .space4 {
@@ -32,6 +35,7 @@
     background: transparent;
     vertical-align: bottom;
     opacity: 0;
+    cursor: pointer;
 }
 
 .space5 {
@@ -41,6 +45,7 @@
     background: transparent;
     vertical-align: bottom;
     opacity: 0;
+    cursor: pointer;
 }
 
 .space6 {
@@ -50,6 +55,7 @@
     background: transparent;
     vertical-align: bottom;
     opacity: 0;
+    cursor: pointer;
 }
 
 #emptyA1 {
@@ -474,7 +480,6 @@ p{
     height: 486px;
     position: relative;
     background-size: contain;
-    margin-right: 250px;
     cursor: pointer;
 }
 
@@ -541,7 +546,6 @@ p{
 }
 
 #body {
-    margin-right: 250px;
   }
 
   
@@ -566,7 +570,6 @@ p{
     #body {margin-right: 0px;}
     #inventory {
         text-align: left;
-        padding-bottom: 50px;
         padding-left: 50px;
     }
     #inventoryItems {
